--- a/webanalytics-backend/docker-compose.yml
+++ b/webanalytics-backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   web:
     build: .    
-    command: ["python", "backend/manage.py", "runserver", "0.0.0.0:8000"]
+    container_name: django-webanalytics-backend
     volumes:
       - .:/app
     ports:
@@ -17,4 +17,24 @@ services:
     - DATABASE_HOST=django-postgres
     - DATABASE_PORT=5432
     - SECRET_KEY=django-insecure-vxj2#_qaf8ed7(qwb&*_@a$q(+7-%ft$p+cir_dir$snr-!g5p  
+    
+  django-postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: webanalytics_dev
+      POSTGRES_USER: django_webanalytics_dev
+      POSTGRES_PASSWORD: django098
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+  
+
+volumes:
+  postgres_data:
+
+networks:
+  default:
+    external:
+      name: django_webanalytics_network
     
