--- a/webanalytics-backend/Dockerfile
+++ b/webanalytics-backend/Dockerfile
@@ -11,4 +11,5 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["python", ".backend/manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python", "backend/manage.py", "runserver", "0.0.0.0:8000"]
+# CMD ["ls"]
