--- a/webanalytics-frontend/web-dashboard/package.json
+++ b/webanalytics-frontend/web-dashboard/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.6",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "html-react-parser": "^5.1.6",
     "js-cookie": "^3.0.5",
     "plotly.js": "^2.29.1",
@@ -25,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.21.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-use-websocket": "^4.8.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
